[package]
name = "probability-drive"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
csv = "1.3.0"
rand = { version = "0.8.5", features = [ "small_rng" ] }
serde = { version = "1.0.203", features = [ "serde_derive" ] }
serde_json = "1.0.117"
uuid = { version = "1.8.0", features = [ "v7", "fast-rng" ] }
